--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "Node.js backend application with Fastify, Prisma, and Clean Architecture",
   "main": "dist/server.js",
+  "_moduleAliases": {
+    "@": "dist"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc && prisma generate",
+    "build": "tsc && tsc-alias && prisma generate",
     "start": "node dist/server.js",
     "start:prod": "NODE_ENV=production node dist/server.js",
     "db:generate": "prisma generate",
@@ -51,6 +54,7 @@
     "prettier": "^3.3.3",
     "supertest": "^7.1.4",
     "ts-jest": "^29.1.2",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4"
@@ -68,6 +72,7 @@
     "fastify": "^5.6.1",
     "fastify-type-provider-zod": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "prisma": "^5.9.1",
