--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,18 +23,7 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"],
-      "@/config/*": ["src/config/*"],
-      "@/controllers/*": ["src/controllers/*"],
-      "@/services/*": ["src/services/*"],
-      "@/repositories/*": ["src/repositories/*"],
-      "@/validators/*": ["src/validators/*"],
-      "@/routes/*": ["src/routes/*"],
-      "@/entities/*": ["src/entities/*"],
-      "@/utils/*": ["src/utils/*"],
-      "@/types/*": ["src/types/*"],
-      "@/middleware/*": ["src/middleware/*"],
-      "@/errors/*": ["src/errors/*"]
+      "@/*": ["src/*"]
     },
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
