feat: remove test endpoints and clean up production code
- Remove test.routes.ts file completely
- Remove test endpoints from auth.routes.ts (/test, /test-db, /test-login, /simple-login, /check-admin)
- Keep only essential production endpoints
- Clean build and ready for deployment

--- a/fly.toml
+++ b/fly.toml
@@ -34,4 +34,4 @@ primary_region = "gru"  # São Paulo region (updated from deprecated gig)
   region = "gru"
 
 [deploy]
-  release_command = "npx prisma migrate deploy"
+  release_command = "npx prisma db push"
