feat: add email system with Resend for customer credentials
- Add Resend email service for sending welcome emails
- Generate unique passwords (8 chars: 4 timestamp + 4 random)
- Send welcome email with login credentials after purchase
- Add RESEND_API_KEY to environment configuration
- Create password helper utilities for unique password generation

--- a/env.example
+++ b/env.example
@@ -23,3 +23,6 @@ MAX_FILE_SIZE=10485760
 # Pagination
 DEFAULT_PAGE_SIZE=10
 MAX_PAGE_SIZE=100
+
+# Email (Resend)
+RESEND_API_KEY=re_Y3oCWVAQ_Csf2L9Gbnt59hyHMG41RFWP3
