--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "prisma": "^5.9.1",
+    "resend": "^6.1.2",
     "zod": "^4.1.11"
   }
 }
