feat: optimize Fly.io configuration for cost reduction
- Reduce memory from 256MB to 128MB
- Optimize health check intervals (30s -> 60s)
- Reduce health check timeout (5s -> 3s)
- Add stop_timeout for faster shutdown
- Remove Docker health check to save resources
- Add comprehensive .dockerignore
- Optimize Prisma configuration for production
- Set NODE_ENV=production in start script
- All optimizations maintain functionality while reducing costs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc && tsc-alias && prisma generate",
-    "start": "node dist/server.js",
+    "start": "NODE_ENV=production node dist/server.js",
     "start:prod": "NODE_ENV=production node dist/server.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
