--- a/fly.toml
+++ b/fly.toml
@@ -17,18 +17,19 @@ primary_region = "gru"  # São Paulo region (updated from deprecated gig)
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+  stop_timeout = "10s"
 
   [[http_service.checks]]
-    grace_period = "10s"
-    interval = "30s"
+    grace_period = "5s"
+    interval = "60s"
     method = "GET"
-    timeout = "5s"
+    timeout = "3s"
     path = "/health"
 
 [[vm]]
   cpu_kind = "shared"
   cpus = 1
-  memory_mb = 256
+  memory_mb = 128
 
 [[vm.regions]]
   region = "gru"
