feat: Add phone field to customer, category endpoints by slug, and fix email system
- Add phone field to Customer model for AbacatePay integration
- Create PUT and DELETE endpoints for categories by slug
- Fix email service to use notifications.noteplanning.com domain
- Add comprehensive logging for webhook debugging
- Update customer validators and services
- Test email functionality confirmed working

--- a/package.json
+++ b/package.json
@@ -65,14 +65,17 @@
     "@fastify/swagger-ui": "^5.2.3",
     "@fastify/type-provider-typebox": "^6.0.0",
     "@prisma/client": "^5.9.1",
+    "@supabase/supabase-js": "^2.74.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "fastify": "^5.6.1",
     "fastify-type-provider-zod": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "multer": "^2.0.2",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "prisma": "^5.9.1",
