--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^5.6.1",
     "fastify-type-provider-zod": "^6.0.0",
+    "firebase": "^12.4.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "multer": "^2.0.2",
