--- a/functions/package.json
+++ b/functions/package.json
@@ -14,17 +14,44 @@
     "node": "22"
   },
   "main": "lib/index.js",
+  "_moduleAliases": {
+    "@": "lib"
+  },
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "@fastify/cors": "^11.1.0",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
+    "@fastify/type-provider-typebox": "^6.0.0",
+    "@prisma/client": "^5.9.1",
+    "@supabase/supabase-js": "^2.74.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "fastify": "^5.6.1",
+    "fastify-type-provider-zod": "^6.0.0",
+    "firebase": "^12.4.0",
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
+    "multer": "^2.0.2",
+    "pino": "^8.19.0",
+    "pino-pretty": "^10.3.1",
+    "prisma": "^5.9.1",
+    "resend": "^6.1.2",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.6.2",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.32.0",
     "firebase-functions-test": "^3.1.0",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.7.3"
   },
   "private": true
